add modals calendar and top up. fix 404 page, Button component. Need to create component Copy from TopUpModal.jsx

--- a/client/src/Pages/NotFound/NotFound.css
+++ b/client/src/Pages/NotFound/NotFound.css
@@ -8,22 +8,35 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     gap: 15px;
     overflow: hidden;
 }
 
-.notFoundLogo {
+.notFoundContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 40%;
+}
+
+.notFoundSvg {
     width: 25vw;
+    padding-bottom: 3vh;
+}
+
+.notFoundMainText {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 1vh;
+    padding-bottom: 2vh;
 }
 
 .notFoundPage h1 {
-    background: linear-gradient(190deg, #FF7700 50%, #E10CFF 80%);
-    -webkit-background-clip: text; /* Для Webkit-браузеров (Chrome, Safari) */
-    background-clip: text; /* Стандартный CSS */
-    -webkit-text-fill-color: transparent;
+    color: #2B2B2A;
     font-weight: 700;
-    font-size: 3vw;
+    font-size: 2vw;
 }
 
 .notFoundText {
