--- a/client/src/Components/Buttons/Button.css
+++ b/client/src/Components/Buttons/Button.css
@@ -9,15 +9,50 @@
     font-size: 18px;
     cursor: pointer;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    position: relative;
+    transition: all 150ms ease-in-out;
 }
 
 .colored {
-    background: linear-gradient(222.4deg, #FF7700 6.42%, #E10CFF 93.77%);
+    background: linear-gradient(185.4deg, #FF7700 6.42%, #E10CFF 93.77%);
+}
+
+.colored:hover {
+    transform: scale(1.02);
+}
+
+.white {
+    background: rgb(255, 255, 255, 1);
+
+}
+
+.white:hover {
+    background: rgb(0, 0, 0, 0.1);
+    transform: scale(1.02);
 }
 
 .white p{
     background: linear-gradient(190deg, #FF7700 50%, #E10CFF 80%);
-    -webkit-background-clip: text; /* Для Webkit-браузеров (Chrome, Safari) */
-    background-clip: text; /* Стандартный CSS */
+    -webkit-background-clip: text;
+    background-clip: text; 
     -webkit-text-fill-color: transparent;
+}
+
+.coloredBorder {
+    border: none;
+}
+
+.coloredBorder::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    padding: 2px 2px;
+    background: linear-gradient(190deg, #FF7700 50%, #E10CFF 80%);
+    z-index: -1;
 }
