--- a/client/src/Pages/Dashboard/Dashboard.css
+++ b/client/src/Pages/Dashboard/Dashboard.css
@@ -1,9 +1,32 @@
 .dashboard {
     padding-top: 30px;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+}
+
+.leftSideDashboard {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    flex: 1;
+}
+
+.rightSideDashboard {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .buttonsDashboard {
     display: flex;
     align-items: center;
     gap: 20px;
+}
+
+.payInOut {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
 }
