--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,15 @@
 .App {
     padding: 0 40px;
 }
+
+@media screen and (max-width: 1400px) {
+    .App {
+        padding: 0 20px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .App {
+        padding: 0 16px;
+    }
+}
