--- a/client/src/Components/Balance/Balance.css
+++ b/client/src/Components/Balance/Balance.css
@@ -3,7 +3,6 @@
     border-radius: 30px;
     padding: 30px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    min-width: 530px;
 }
 
 .balanceRow {
@@ -118,4 +117,27 @@
     background: #A0A0A0;
     clip-path: polygon(0 0, 0 100%, 100% 50%);
     z-index: -1;
+}
+
+@media screen and (max-width: 1774px) {
+    .balanceContainer {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1165px) {
+    .balanceContainer {
+        width: auto;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .balanceRow {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16px;
+    }
+    .balanceRow h2 {
+        line-height: 32px;
+    }
 }
