--- a/client/src/Components/Notification/Notification.css
+++ b/client/src/Components/Notification/Notification.css
@@ -43,3 +43,33 @@
     -webkit-text-fill-color: transparent;
     white-space: pre-wrap;
 }
+
+@media screen and (max-width: 768px) {
+    .notification {
+        right: 50%;
+        padding: 12px 12px;
+        width: 80%;
+        text-align: center;
+    }
+    @keyframes changeX {
+        0% {
+            transform: translateX(300%);
+        }
+    
+        25% {
+            transform: translateX(50%);
+        }
+    
+        50% {
+            transform: translateX(50%);
+        }
+    
+        90% {
+            transform: translateX(50%);
+        }
+    
+        100% {
+            transform: translateX(300%);
+        }
+    }
+}
