--- a/client/src/Components/IconWrapper/IconWrapper.css
+++ b/client/src/Components/IconWrapper/IconWrapper.css
@@ -1,6 +1,7 @@
 .iconWrapper {
     position: relative;
     display: inline-block;
+    cursor: pointer;
   }
   
   .iconWrapper::before {
@@ -28,6 +29,7 @@
 
   .iconWrapper img {
     transition: all 0.3s ease;
+    pointer-events: none;
   }
 
   .iconWrapper:hover img {
