--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -1,6 +1,7 @@
 .headerContainer {
     position: relative;
     z-index: 1;
+    padding-top: 30px;
 }
 
 .header {
@@ -11,7 +12,6 @@
     justify-content: space-between;
     padding: 0 30px;
     height: 80px;
-    margin-top: 30px;
     position: relative;
     transition: all 150ms ease-in-out;
     z-index: 2;
@@ -250,7 +250,6 @@
 @media screen and (max-width: 650px) {
     .header {
         border-radius: 10px;
-        margin-top: 20px;
     }
 
     .header.open {
