--- a/client/src/Components/Table/Table.css
+++ b/client/src/Components/Table/Table.css
@@ -9,6 +9,17 @@
     border-radius: 30px;
 }
 
+.smallDispute {
+    background: none;
+    box-shadow: none;
+    padding: 0;
+    border-radius: 0;
+}
+
+.smallDispute * {
+    font-size: 14px!important;
+}
+
 .universal-table h1 {
     color: #2B2B2A;
     font-weight: 600;
@@ -20,7 +31,8 @@
 table {
     width: 100%;
     border-collapse: collapse;
-    table-layout: fixed; /* Добавлено для равной ширины колонок */
+    table-layout: fixed; 
+    min-width: 1100px;
 }
 
 th {
@@ -37,7 +49,8 @@ td:not(.actions) {
 }
 
 td.actions {
-    width: auto; /* Автоматическая ширина для actions */
+    width: fit-content; 
+    position: relative;
 }
 
 tbody tr {
@@ -121,4 +134,60 @@ tbody tr:last-child {
     justify-content: center;
     line-height: 13px;
     cursor: pointer;
+}
+
+.nullResult {
+    color: #2B2B2A;
+    font-weight: 400;
+    font-size: 24px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+}
+
+@media screen and (max-width: 1100px) {
+    .pageSwitch {
+        font-size: 14px;
+    }
+    .paginationBtn {
+        font-size: 14px;
+    }
+    .ellipsis {
+        font-size: 14px;
+    }
+    .universal-table h1 {
+        font-size: 32px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .universal-table {
+        gap: 10px;
+        padding: 24px;
+        border-radius: 10px;
+    }
+    .pageSwitch {
+        font-size: 10px;
+        padding: 0 10px;
+        height: 25px;
+    }
+    .pageNumbers {
+        gap: 4px;
+    }
+    .pagination {
+        gap: 4px;
+    }
+    .paginationBtn {
+        font-size: 10px;
+        width: 25px;
+        height: 25px;
+    }
+    .ellipsis {
+        font-size: 10px;
+    }
+    th {
+        padding-bottom: 10px;
+        font-size: 14px;
+    }
 }
